objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <label>Contact Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Title__c</fullName>
        <label>Old Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_on_Service_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email on Service Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_on_Service_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email on Service Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_on_Service_Worked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email on Service Worked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN__Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL( FN__Mapping_Status__c , &apos;Located&apos;), HYPERLINK( &quot;apex/FN__FindNearbymap?cid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) , HYPERLINK( &quot;apex/FN__CGeoCode?id=&quot; &amp; Id,&quot;Locate Contact&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Lat__c</fullName>
        <label>Contact Lat</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Lon__c</fullName>
        <label>Contact Lon</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Address__c</fullName>
        <inlineHelpText>Contact&apos;s Mapping Address</inlineHelpText>
        <label>Contact Mapping Address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mailing</fullName>
                    <default>true</default>
                    <label>Mailing</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Do Not Map</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FN__Mapping_Status__c</fullName>
        <inlineHelpText>Contact&apos;s Mapping Status.</inlineHelpText>
        <label>Contact Mapping Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Located Yet</fullName>
                    <default>true</default>
                    <label>Not Located Yet</label>
                </value>
                <value>
                    <fullName>Located</fullName>
                </value>
                <value>
                    <fullName>Problem with Address</fullName>
                </value>
                <value>
                    <fullName>Bad Google Key</fullName>
                </value>
                <value>
                    <fullName>Google Exhausted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>League_Representative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>League Representative?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORGCUSTOM4_DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_OLD_TITLE__c</fullName>
        <label>ORGCUSTOM4_OLD_TITLE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_In_for_Promotional_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In for Promotional Emails?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_on_Service_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Text on Service Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_on_Service_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Text on Service Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_on_Service_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Text on Service Requested</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>